# msaez-automate-project-generator

./: .env.example  .gitignore  Dockerfile  README.md  STANDARD_TRANSFORMATION_GUIDE.md  langgraph.json  pyproject.toml  start.sh
.github/workflows/: build-and-push.yml
k8s/: deployment.yaml  pvc.yaml
scripts/: apply_to_k8s.sh  build_image.sh  index_standards.py  query_vectorstore.py  test_draft_context_semantic_text.py  test_semantic_text.py
src/project_generator/: config.py  main.py  run_healcheck_server.py  simple_autoscaler.py
src/project_generator/models/: __init__.py  action_model.py  base.py  inputs.py  outputs.py  state.py
src/project_generator/systems/: __init__.py  acebase_system.py  firebase_system.py  storage_system.py  storage_system_factory.py
src/project_generator/utils/: __init__.py  convert_case_util.py  decentralized_job_manager.py  job_util.py  json_util.py  logging_util.py  refs_trace_util.py  trace_markdown_util.py  xml_util.py
src/project_generator/workflows/aggregate_draft/: __init__.py  aggregate_draft_generator.py  ddl_extractor.py  ddl_fields_generator.py  preview_fields_generator.py  requirements_mapper.py  standard_transformer.py  traceability_generator.py
src/project_generator/workflows/bounded_context/: bounded_context_generator.py
src/project_generator/workflows/common/: query_expander.py  rag_retriever.py  standard_indexer.py  standard_loader.py  standard_rag_service.py
src/project_generator/workflows/requirements_validation/: requirements_validator.py
src/project_generator/workflows/sitemap/: __init__.py  (+2 more)
(+3 files in other folders)
